Fix JDK 26 incompatibilities
Update ORB to 6.0.0-M1 which removes the Applet package
Add eecap for JDK 26 (and 27 while we're at it)

Include improved diagnostics to capture any JDK 26 issues better